# anndata-benchmark

./: .gitignore  GEMINI.md  benchmark_config.yaml  pixi.toml  run_benchmarks.py
python/: benchmark.py  generate_data.py
rust/: Cargo.toml
rust/src/: main.rs
