[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
ndarray = { version = "0.17", features = ["rayon"] }
polars = { version = "0.53", features = [
    "lazy",
    "ndarray",
    "dtype-full",
] }
parking_lot = "0.12"
anndata = {git="https://github.com/SingleRust/anndata-rs", branch = "sparse-rewrite", package = "anndata" }
anndata-hdf5 = {git="https://github.com/SingleRust/anndata-rs", branch = "sparse-rewrite", package = "anndata-hdf5" }
anndata-zarr = {git="https://github.com/SingleRust/anndata-rs", branch = "sparse-rewrite", package = "anndata-zarr" }
anndata-memory = {git="https://github.com/SingleRust/Anndata-Memory", branch="feat-anndata-sprs-upgrade"}
sprs = "0.11.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sysinfo = "0.30"
chrono = "0.4"
